Mostly broke things

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: page
 title: John Kratz, PhD
 subtitle: UX design for scholars
 use-site-title: false
+show-avatar: true
 ---
 
 <div class="posts-list">
